--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>8.1</title>
 </head>
 <body>
-<p>hi!</p>
+<form action = "formdata.html" method = "GET">
+	<input type="text" name="name" value = "">
+	<input type="submit" name="" value ="Submit">
+</form>
 </body>
 </html>
