--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
 	<title>8.1</title>
 </head>
 <body>
-<form action = "formdata.html" method = "GET">
-	<input type="text" name="name" value = "">
-	<input type="submit" name="" value ="Submit">
+<form action = "https://matanbouganim.github.io/index.html" method = "GET"
+onsubmit="return validateform(this)">
+
+
+Users:
+	<input type="text"
+	 name="name" 
+	 value = ""
+	 >
+
+	<input type="submit" 
+	name="" 
+	value ="Submit"
+	>
+
+
 </form>
 </body>
 </html>
+
+
+<!-- array and put inside two objects 
+
+username and email
+
+in the form, call the zivush API  -->
