--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 	<title>8.1</title>
 </head>
 <body>
-<form action = "https://matanbouganim.github.io/index.html" method = "GET"
-onsubmit="return validateform(this)">
+<form 
+action = "formdata.html" 
+method = "GET"
+onsubmit = "return validateform(this)">
 
 
-Users:
+Username:
 	<input type="text"
 	 name="name" 
+	 value = ""
+	 >
+email:
+	<input type="email"
+	 name="email" 
 	 value = ""
 	 >
 
@@ -21,6 +28,20 @@ Users:
 
 
 </form>
+
+
+
+<script> 
+const users = 
+[
+{},
+{},
+]
+
+
+
+
+</script>
 </body>
 </html>
 
